Add proper sizing

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Graphic Score</title>
         <meta charset="utf-8">
+        <link href="style.css" rel="stylesheet">
         <script src="svg.min.js"></script>
         <script src="app.js" defer></script>
     </head>
