--- a/1/index.html
+++ b/1/index.html
@@ -4,7 +4,7 @@
         <title>Graphic Score</title>
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
-        <script src="svg.min.js"></script>
+        <script src="../lib/svg.min.js"></script>
         <script src="app.js" defer></script>
     </head>
     <body>
