Add landing page

--- a/1/index.html
+++ b/1/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Graphic Score</title>
+        <title>Graphic Score 1</title>
         <meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
         <script src="../lib/svg.min.js"></script>
